# LISA

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  check_renewing_git.cpp  check_renewing_git.h  compilation_config.cpp  compilation_config.h  local_to_server_git.cpp  local_to_server_git.h  main.cpp
Server/: CMakeLists.txt  compilation_handler.cpp  compilation_handler.h  config.cpp  config.h  git_handler.cpp  git_handler.h  logger.cpp  logger.h  main.cpp  server.cpp  server.h
